portal-demo/portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: portal-ingress
spec:
  defaultBackend:
    service:
      name: portal-client-service
      port:
        number: 80
  ingressClassName: nginx
  rules:
  - host: portal-demo.mharikmert.dev
    http:
      paths:
      - backend:
          service:
            name: portal-client-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: api.portal-demo.mharikmert.dev
    http:
      paths:
      - backend:
          service:
            name: portal-api-service
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
